<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <ListView
        android:id="@+id/Listview_Gallery"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp" />

</FrameLayout>
