<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/TV_gallery_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="2"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/TV_gallery_path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="3"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/But_gallery_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="刪掉我吧QQ" />


</LinearLayout>